2003-02-05  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  (surrender)  Add a domain parameter to make
	reconnecting easier.

	* lib/Majordomo.pm:  (archive_chunk, tokeninfo_chunk)  Clean
	HTML message parts if "clean" mode is specified.
	(_set)  Bugfix:  Change only one address for a pattern unless
	allmatching mode is specified.

	* lib/Mj/CommandProps.pm:  Add support for "clean" mode for
	the archive and tokeninfo commands.

	* lib/Mj/Format.pm:  (who)  Convert the nomail return time
	into a readable date.

	* lib/Mj/List.pm:  (add)  Use "each" as the default class
	for sublists.

	* lib/Mj/MIMEParser.pm:  (get_entity_structure)  Use "file"
	instead of "path" for consistency.

	* lib/Mj/Resend.pm:  Add error messages and XLANG markers.
	(clean_text)  Rename _clean_text to reflect external use.

2003-02-03  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/mj_cf_defs.pl: Change default who_access and which_access to
	closed.

2003-01-27  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  Bugfix:  Improve sublist validation
	to avoid taint problems.  Thanks to Roger Klorese.

	* setup/ask_domain.pl:  Bugfix:  Incorporate qmail code as
	needed.  Thanks to Tim Treaster.

2003-01-21  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Fail gracefully if no domains are defined.
	Thanks to Gary Schrock.

2003-01-18  Michael Yount <csf@moscow.com>

	* bin/mj_queuerun:  (parse_commands) Do not return a result
	if the result file is empty.

	* bin/mj_shell:  (parse_command)  Initialize variable to prevent
	warnings.  Thanks to Brock Rozen.

	* lib/Majordomo.pm:  Version number is now 0.1200301180.
	(_get_msg_data)  Return an error if part 0h is referenced.
	  Thanks to Brock Rozen.

	* lib/Bf/Sender.pm:  Reverse the order of the host and
	user in envelope extensions.  Implemented by John Levine.

	* lib/Mj/Addr.pm:  (_validate)  Bugfix:  Change the list
	separator character temporarily.  Thanks to Tim Treaster.
